--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
   </div>
   <div class="row">
   <div class="col-lg-6 mx-lg-auto">
-  <p class="text-center pt-5">View my Github repo <a href="">here.</a>
+  <p class="text-center pt-5">View my Github repo <a href="https://github.com/frankirosenthal/js_bootstrap_project">here.</a>
   </p>
+  <p class="text-center">All photos were taken by Franki Rosenthal</p>
   </div>
   </div>
 
